# material-mkdocs-blog

./: Makefile  README.md  first_post.txt  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  setup.md
docs/blog/: index.md
docs/blog/2021/: cooking_post.md  core_web_vitals.md  how_to_build_this_blog.md
docs/blog/subtopic/: boring_post.md  interesting_post.md
docs/javascripts/: extra.js
overrides/partials/: blog_metadata.html
