[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Ryan <user@4kelly.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7"

[tool.poetry.dev-dependencies]
flake8 = "^4"
pep8-naming = "*"
black = "*"
isort = "^5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
